# shotsplit

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  pypi.yml  release.yml  testpypi.yml
src/shotsplit/: __init__.py  _version.py  autoshot_model.py  splitter.py
tests/: test_splitter.py
