[project]
name = "autoshot-splitter"
version = "0.1.0"
description = "AutoShot-based shot boundary segment extraction for video files."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "MIT"
keywords = ["autoshot", "shot-boundary-detection", "video", "scene-detection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "einops>=0.7",
    "numpy>=1.26",
    "opencv-python-headless>=4.8",
    "torch>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/shotsplit"]
